<resources>
    <string name="app_name">SampahIn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="maps">Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Manage waster for better life!</string>
    <string name="sign_up_title">Sign up with your email</string>
    <string name="login_title">Login with your email</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="sign_up_with_gmail">Sign Up with Gmail</string>
    <string name="back_button"><![CDATA[< Back]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_with_gmail">Login With Gmail</string>
    <string name="gallery">Gallery</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Result</string>
    <string name="camera">Camera</string>
    <string name="time">Time</string>
</resources>